Prepare Java 8 compatibility source cleanup