@@ -56,7 +56,7 @@ public final class CacheKey {
 
     private static String requireText(String value, String name) {
         Objects.requireNonNull(value, name);
-        if (value.isBlank()) {
+        if (value.trim().isEmpty()) {
             throw new IllegalArgumentException(name + " must not be blank");
         }
         return value;
