@@ -78,7 +78,7 @@ public final class CacheInvalidationEvent {
 
     private static String requireText(String value, String name) {
         Objects.requireNonNull(value, name);
-        if (value.isBlank()) {
+        if (value.trim().isEmpty()) {
             throw new IllegalArgumentException(name + " must not be blank");
         }
         return value;
