@@ -1,8 +1,9 @@
 package org.nexary.core.observation;
 
 import java.util.Collection;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 
 /** Publishes provider-neutral observation events emitted by Nexary capabilities. */
 @FunctionalInterface
@@ -18,9 +19,15 @@ public interface NexaryObservationPublisher {
 
     /** Returns a publisher that fans out to listeners and shields business paths from listener failures. */
     static NexaryObservationPublisher fanOut(Collection<NexaryObservationListener> listeners) {
-        List<NexaryObservationListener> safeListeners = listeners == null
-                ? List.of()
-                : listeners.stream().filter(Objects::nonNull).toList();
+        List<NexaryObservationListener> mutableListeners = new ArrayList<>();
+        if (listeners != null) {
+            for (NexaryObservationListener listener : listeners) {
+                if (listener != null) {
+                    mutableListeners.add(listener);
+                }
+            }
+        }
+        final List<NexaryObservationListener> safeListeners = Collections.unmodifiableList(mutableListeners);
         if (safeListeners.isEmpty()) {
             return noop();
         }
