@@ -1,6 +1,7 @@
 package org.nexary.spi;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.ServiceLoader;
 
@@ -10,6 +11,6 @@ public final class ServiceLoaderNexaryServiceRegistry implements NexaryServiceRe
     public <T> List<T> services(Class<T> type) {
         List<T> services = new ArrayList<>();
         ServiceLoader.load(type).forEach(services::add);
-        return List.copyOf(services);
+        return Collections.unmodifiableList(services);
     }
 }
