@@ -1,6 +1,8 @@
 package org.nexary.messaging;
 
 import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import org.nexary.core.context.TrafficTag;
@@ -15,16 +17,16 @@ public record MessageEnvelope<T>(
         TrafficTag trafficTag) {
     public MessageEnvelope {
         Objects.requireNonNull(topic, "topic");
-        if (topic.isBlank()) {
+        if (isBlank(topic)) {
             throw new IllegalArgumentException("topic must not be blank");
         }
-        headers = headers == null ? Map.of() : Map.copyOf(headers);
+        headers = headers == null ? Collections.emptyMap() : Collections.unmodifiableMap(new LinkedHashMap<>(headers));
         trafficTag = trafficTag == null ? TrafficTag.defaults() : trafficTag;
     }
 
     /** Creates a simple envelope. */
     public static <T> MessageEnvelope<T> of(String topic, T payload) {
-        return new MessageEnvelope<>(topic, null, payload, Map.of(), null, TrafficTag.defaults());
+        return new MessageEnvelope<>(topic, null, payload, Collections.emptyMap(), null, TrafficTag.defaults());
     }
 
     /** Header used for provider-neutral duplicate consumption protection. */
@@ -33,9 +35,13 @@ public record MessageEnvelope<T>(
     /** Returns the stable message id used by idempotent consumers. */
     public String messageId() {
         String messageId = headers.get(MESSAGE_ID_HEADER);
-        if (messageId != null && !messageId.isBlank()) {
+        if (!isBlank(messageId)) {
             return messageId;
         }
-        return key == null || key.isBlank() ? topic + ":" + Integer.toHexString(Objects.hashCode(payload)) : topic + ":" + key;
+        return isBlank(key) ? topic + ":" + Integer.toHexString(Objects.hashCode(payload)) : topic + ":" + key;
+    }
+
+    private static boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
     }
 }
